# PhysiTerm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: algorithm.h  logs.c  logs.h  main.c  particles.h  physics.c  physics.h  terminal.c  terminal.h  vec.h  window.h
